--- a/src/app/dashboard/user/forgot-password-modal/forgot-password-modal.component.html
+++ b/src/app/dashboard/user/forgot-password-modal/forgot-password-modal.component.html
@@ -1,6 +1,9 @@
-<div class="rounded-md p-4 m-4">
+<div class="text-red-600 absolute top-0 right-0 p-1">
+    <i-feather name="x-circle" (click)="closeDialog()" class="cursor-pointer"></i-feather>
+</div>
+<div class="p-4">
     <form [formGroup]="forgotPasswordForm">
-        <div class="m-2">
+        <div class="grid grid-cols-1 mt-2">
             <input formControlName="email"
                 class="w-full border-2 px-4 py-2 rounded-md m-2 hover:border-gray-400 focus:border-gray-400 focus:outline-none"
                 [ngClass]="{'border-red-400': forgotPasswordForm.get('email')?.invalid && forgotPasswordForm.get('email')?.touched
@@ -17,3 +20,4 @@
             </button>
         </div>
     </form>
+</div>
