--- a/src/app/categories/categories-list/categories-list.component.html
+++ b/src/app/categories/categories-list/categories-list.component.html
@@ -17,12 +17,12 @@
         </select>
     </div>
 </div>
-<div class="flex justify-center mt-5 gap-10 font-sans font-bold">
-    <div>
+<div class="flex justify-center mt-5 gap-5 font-sans font-bold">
+    <div class="p-5">
         Showing <span class="italic"> {{ counter }} </span> of
         <span class="italic">{{ totalCategories }}</span> results
     </div>
-    <div>
+    <div class="p-5">
         sorted by 
             <select [(ngModel)]="selectedSortOption" (change)="onSortOptionChange($event)"
                 class="italic text-sm cursor-pointer border border-gray-400 rounded-md  focus:outline-none text-gray-700">
