--- a/src/app/dashboard/user/signup-modal/signup-modal.component.html
+++ b/src/app/dashboard/user/signup-modal/signup-modal.component.html
@@ -38,7 +38,7 @@
                 </span>
             </div>
             <div class="grid grid-cols-2 gap-1 flex items-center">
-                <div class="mx-auto">
+                <div class="mx-auto col-span-2">
                     <input formControlName="firstname"
                         class="w-36 md:w-full border-2 px-4 py-2 rounded-md m-2 hover:border-gray-400 focus:border-gray-400 focus:outline-none"
                         [ngClass]="{'border-red-400': signUpForm.get('firstname')?.invalid && signUpForm.get('firstname')?.touched }"
@@ -48,7 +48,7 @@
                         First Name is required
                     </div>
                 </div>
-                <div class="mx-auto">
+                <div class="mx-auto col-span-2">
                     <input formControlName="lastname"
                         class="w-36 md:w-full border-2 px-4 py-2 rounded-md m-2 hover:border-gray-400 focus:border-gray-400 focus:outline-none"
                         [ngClass]="{'border-red-400': signUpForm.get('lastname')?.invalid && signUpForm.get('lastname')?.touched }"
