fixed login form clear button

--- a/src/app/dashboard/user/login-form/login-form.component.html
+++ b/src/app/dashboard/user/login-form/login-form.component.html
@@ -38,7 +38,8 @@
                     </div>
                 </div>
                 <div class="bg-gray-950 rounded-md mx-auto m-2 hover:drop-shadow-2xl transition-all duration-500 transform hover:scale-110 focus:scale-110">
-                    <button class="mx-2 p-2 text-gray-200 font-sans font-bold text-sm lg:text-md  flex items-center justify-center">
+                    <button class="mx-2 p-2 text-gray-200 font-sans font-bold text-sm lg:text-md  flex items-center justify-center"
+                    (click)="clear()">
                         Cancel
                     </button>
                 </div>
