--- a/src/app/footer/sub-footer/sub-footer.component.html
+++ b/src/app/footer/sub-footer/sub-footer.component.html
@@ -5,7 +5,9 @@
         </h3>
         <h3 class="text-white">
             Developed by
-            <span class="text-red-600 font-bold font-sans">Blessed Tasela</span>
+            <span class="text-red-600 font-bold font-sans cursor-pointer" [routerLink]="['/blessed-tasela']">
+                Blessed Tasela
+            </span>
         </h3>
         <div class="flex flex-wrap gap-2 lg:gap-10 items-center col-span-2 lg:col-span-1 mx-auto">
             <h3 class="text-white">
