--- a/src/app/portfolio/blessed-tasela/blessed-tasela.component.html
+++ b/src/app/portfolio/blessed-tasela/blessed-tasela.component.html
@@ -1,1 +1,11 @@
-<p>blessed-tasela works!</p>
+<section class="bg-dark-blue h-screen w-screen">
+<div class="text-gray-400 font-bold font-sans p-4">
+    Sorry, Page under development
+</div>
+<div class="flex justify-center">
+    <button class="p-2 py-2 bg-gray-400 font-bold text-dark-blue font-sans rounded-md">
+    <a routerLink="/home">Go to Berliz</a>
+        
+    </button>
+</div>
+</section>
